--- a/index.html
+++ b/index.html
@@ -5,19 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/cfb697b5f5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
     <title>Free Guy! (2021)</title>
 </head>
 <body>
-
-    <div class="container">
-        <h1>Hello world</h1>
-    </div>
+    <h1>Free Guy (2021)</h1>
+    <p><i>Life's too short to be a background character.</i></p>   
     
+    <h2>Overview</h2>
+    <p>A bank teller discovers he is actually a background player in an open-world video game, and decides to become the hero of his own story. Now, in a world where there are no limits, he is determined to be the guy who saves his world his way before it's too late.</p>
 
-    <!-- <footer>
+    <img src="images/freeguy.jpg" alt="Free Guy Poster" width="250px">
+
+    <hr>
+
+    <table border="1">
+        <tbody>
+            <tr>
+                <th>Budget <i class="fa-solid fa-wallet"></i></th>
+                <td>$110,000,000.00</td>
+            </tr>
+            <tr>
+                <th>Revenue <i class="fa-solid fa-dollar-sign"></i></th>
+                <td>$331,500,000.00</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <hr>
+
+    <p><a href="https://www.themoviedb.org/movie/550988-free-guy" target="_blank">Source <i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+
+    <hr>
+
+    <footer>
         <h3>Find me to discuss the movie</h3>
-        
+        <!-- ul - unordered list-->
         <ul>
             <li><a href="#">Twitter<i class="fa-brands fa-twitter"></i></a></i></li>
             <li><a href="#">Instagram<i class="fa-brands fa-instagram"></i></a></i></li>
@@ -26,7 +48,7 @@
 
         <p>Rasmus L. &#169; 2024</p>
 
-    </footer> -->
+    </footer>
 
 </body>
 </html>
